<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage"
    android:background="#FCFEFD">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <RelativeLayout
            android:id="@+id/rel_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rel_doctor"
            android:layout_marginBottom="10dp">

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_doctor"
            android:layout_width="177dp"
            android:layout_height="138dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="209dp"
            android:background="@drawable/h4">

            <TextView
                android:id="@+id/txt_doctorname"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="29dp"
                android:gravity="start"
                android:text="@string/doctor"
                android:textColor="#FFF"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txt_doctordesc"
                android:layout_width="19dp"
                android:layout_height="9dp"
                android:layout_below="@+id/txt_doctorname"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="-21dp"
                android:layout_marginEnd="180dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="44dp"
                android:gravity="start"
                android:maxLines="3"
                android:text=""
                android:textColor="#FFF"
                android:textSize="12dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_pharmacy"
            android:layout_width="177dp"
            android:layout_height="138dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="209dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/h7" />

            <TextView
                android:id="@+id/txt_pharmacyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="59dp"
                android:gravity="start"
                android:text="@string/pharmany"
                android:textColor="#FFF"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txt_pharmacydesc"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_pharmacyname"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="-43dp"
                android:layout_marginEnd="304dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="74dp"
                android:gravity="start"
                android:maxLines="3"
                android:text=""
                android:textColor="#FFF"
                android:textSize="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_hospital"
            android:layout_width="177dp"
            android:layout_height="138dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="207dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/h5">

            <TextView
                android:id="@+id/txt_hospitalname"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="31dp"
                android:gravity="center|start"
                android:text="@string/hospital"
                android:textColor="#FFF"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txt_hospitaldesc"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_hospitalname"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="234dp"
                android:layout_marginRight="10dp"
                android:gravity="start"
                android:maxLines="3"
                android:text=""
                android:textColor="#FFF"
                android:textSize="10dp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_circle_icon"
            android:layout_width="389dp"
            android:layout_height="282dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="431dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo02" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="394dp"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="Find Nearest Doctor"
            android:textColor="#51596A"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="367dp"
            android:gravity="center"
            android:text="And Book Appointment By This App"
            android:textColor="#51596A"
            android:textSize="16dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="177dp"
            android:layout_height="138dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="196dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/h8"
            android:text="AI Doctor"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FEFEFE"
            android:textSize="18dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:background="#0089CF"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:gravity="center_vertical">

            <com.nearbydoctor.utils.RoundedImageView
                android:id="@+id/img_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/profile" />

            <TextView
                android:id="@+id/txt_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/img_profile"
                android:maxLines="1"
                android:layout_toRightOf="@+id/img_profile"
                android:gravity="center"
                android:text="@string/profile_txt"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_profile"
                android:maxLines="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/img_profile"
                android:layout_toRightOf="@+id/img_profile"
                android:text="@string/sign_in_txt"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_homen"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/home_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_favorite"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/home_txt"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fav"
            android:layout_width="200dp"
            android:layout_height="45dp"

            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">
            <!--<ImageView-->
            <!--android:layout_width="17dp"-->
            <!--android:layout_height="17dp"-->

            <!--android:layout_marginLeft="15dp"/>-->
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/favorites_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_about"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:maxLines="1"

                android:text="@string/favorites_txt"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_terms"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:maxLines="1"
                android:layout_marginStart="30dp"
                android:background="@drawable/about_us_icon"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/txt_terms"
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:maxLines="1"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:text="@string/about_us_txt"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_social"
            android:layout_width="200dp"
            android:layout_height="45dp"

            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/social_sharig_icon"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/txt_terms1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:maxLines="1"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/social_sharing_txt"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setting"
            android:layout_width="200dp"
            android:layout_height="45dp"

            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/setting_icon"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/txt_cart"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:maxLines="1"
                android:gravity="center"
                android:text="@string/settings_txt"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/logout"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:maxLines="1"
                android:layout_gravity="center|bottom"
                android:background="@drawable/log_out_btn" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>


